--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,7 +6,7 @@ $z-index-donate: 4;
 $z-index-details: 5;
 
 .goToMainSite {
-  position: fixed;
+  position: absolute;
   top: 2rem;
   left: 3rem;
   font-size: 4rem;
@@ -24,7 +24,7 @@ $z-index-details: 5;
   }
 }
 body.scrolled .goToMainSite {
-  background-color: #343434a3;
+  //background-color: #343434a3;
 }
 
 .screen {
@@ -156,7 +156,7 @@ body.scrolled .goToMainSite {
     }
 
     h2 {
-      font-size: 8rem;
+      font-size: 6rem;
       font-weight: bold;
     }
 
@@ -192,12 +192,13 @@ body.scrolled .goToMainSite {
       .controls {
         display: flex;
         flex-direction: column;
+        align-items: flex-start;
       }
     }
 
     .amounts {
       display: flex;
-      margin-top: 10rem;
+      margin-top: 9rem;
 
       > button {
         background: none;
@@ -234,23 +235,74 @@ body.scrolled .goToMainSite {
     }
 
     .donateButton,
+    .donateSubscribeCheckbox,
+    .showDetailsButton,
+    .hideDetailsButton {
+      &.isVisible {
+        opacity: 1;
+      }
+    }
+
+    .donateButton,
     .showDetailsButton,
     .hideDetailsButton {
       border-radius: 2rem;
-      height: 18rem;
+      height: 15rem;
       font-size: 5rem;
       color: white;
       padding: 1rem 18rem;
       transition: opacity 200ms;
       flex-shrink: 0;
 
-      &.isVisible {
-        opacity: 1;
-      }
-
       &:disabled {
         pointer-events: none;
         opacity: 0.5;
+      }
+    }
+
+    .donateSubscribeCheckbox {
+      display: flex;
+      font-size: 5rem;
+      align-items: center;
+      cursor: pointer;
+      opacity: 0;
+      margin-top: 6rem;
+
+      .checkbox {
+        position: relative;
+        width: 6rem;
+        height: 6rem;
+        margin-right: 2rem;
+
+        .bg {
+          border-radius: 0.75rem;
+          position: absolute;
+          z-index: 1;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          border: 0.5rem solid var(--red);
+        }
+
+        > input {
+          position: absolute;
+          z-index: 2;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          opacity: 0;
+          margin: 0;
+
+          &:checked + .bg {
+            background-image: url("data:image/svg+xml,%3Csvg width='52' height='52' viewBox='0 0 52 52' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5 22.5L21.5 37.5L47 10' stroke='white' stroke-width='9'/%3E%3C/svg%3E%0A");
+            background-size: 4rem;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-color: var(--red);
+          }
+        }
       }
     }
 
@@ -274,12 +326,12 @@ body.scrolled .goToMainSite {
       background: var(--red);
       border: none;
       opacity: 0;
-      margin-top: 12rem;
+      margin-top: 9rem;
     }
 
     .details {
       position: absolute;
-      bottom: 8rem;
+      bottom: 10rem;
       right: 12rem;
       max-width: 200rem;
       width: calc(100vw - 12rem * 2);
