--- a/src/layout.pug
+++ b/src/layout.pug
@@ -44,18 +44,20 @@ body
       h1 #{data.donateAmountPrompt}
       #amounts.amounts
         each present in data.presents
-          button(type='button' data-id=present.id data-for-us=present.presentForUs.toString() data-value=present.price data-stripe-price=present.stripePriceId) $#{present.price}
+          button(type='button' data-for-us=present.presentForUs.toString() data-value=present.price) $#{present.price}
       .controls
-        button#donateButton.donateButton #{data.donateButton}
-        label#donateSubscribeCheckbox.donateSubscribeCheckbox
+        .row
+          button#donateButton.donateButton #{data.donateButton}
+          input#donateAmount.donateAmountInput(type="text")
+        label.donateSubscribeCheckbox
           .checkbox
-            input(type='checkbox')
+            input#donateSubscribeCheckbox(type='checkbox')
             .bg
           div #{data.donateSubscription}
         #errorMessage.errorMessage
     #details.details
       each present in data.presents
-        .amount-details(data-value=present.price data-id=present.id)
+        .amount-details(data-value=present.price data-id=present.id data-for-us=present.presentForUs.toString())
           h2 #{present.title}
           .text
             - var paragraphs = present.body.trim().split(/(\r?\n)+/);
