--- a/src/index.scss
+++ b/src/index.scss
@@ -1,28 +1,6 @@
-@import "./global.scss";
+@import "./styles/global.scss";
 
-$z-index-header: 10;
-$z-index-bg-list: 1;
-$z-index-donate: 4;
-$z-index-details: 5;
 
-.goToMainSite {
-  position: absolute;
-  top: 2rem;
-  left: 3rem;
-  font-size: 4rem;
-  z-index: $z-index-header;
-  padding: 2rem 3rem;
-  color: white;
-  text-decoration: none;
-  border-radius: 0.1rem;
-  transition: background-color 500ms;
-
-  span {
-    margin-right: 0.4em;
-    position: relative;
-    top: -0.03em;
-  }
-}
 body.scrolled .goToMainSite {
   //background-color: #343434a3;
 }
