--- a/src/index.pug
+++ b/src/index.pug
@@ -27,19 +27,20 @@ block content
           p #{paragraph}
   #donate-screen.screen.donate
     #bg-list.bg-list
+      each present in data.presents
+        img(data-product-key=present.productKey src='/assets/' + present.image)
       img.isVisible(data-value='default' data-for-us='false' src='/assets/amount_not_selected.jpg')
-      img.right-bottom(data-value='5' data-for-us='false' src='/assets/5_usd.jpg')
-      img.right-bottom(data-value='10' data-for-us='false' src='/assets/10_usd.jpg')
-      img(data-value='25' data-for-us='false' src='/assets/25_usd.jpg')
-      img(data-value='30' data-for-us='false' src='/assets/30_usd.jpg')
-      img(data-value='50' data-for-us='false' src='/assets/50_usd.jpg')
-      img.right-bottom(data-value='100' data-for-us='false' src='/assets/100_usd.jpg')
-      img.right-bottom(data-value='10' data-for-us='true' src='/assets/10_usd_for_us.jpg')
     .donate
       h1 #{data.donateAmountPrompt}
       #amounts.amounts
         each present in data.presents
-          button(type='button' data-for-us=present.presentForUs.toString() data-value=present.price) $#{present.price}
+          button(
+            type='button',
+            data-for-us=present.presentForUs.toString(),
+            data-product-key=present.productKey,
+            data-custom=present.custom.toString(),
+            data-value=present.price
+          ) #{present.custom ? present.title : `$${present.price}`}
       .controls
         .row
           button#donateButton.donateButton #{data.donateButton}
@@ -52,7 +53,11 @@ block content
         #errorMessage.errorMessage
     #details.details
       each present in data.presents
-        .amount-details(data-value=present.price data-id=present.id data-for-us=present.presentForUs.toString())
+        .amount-details(
+          data-value=present.price,
+          data-product-key=present.productKey,
+          data-for-us=present.presentForUs.toString()
+        )
           h2 #{present.title}
           .text
             - var paragraphs = present.body.trim().split(/(\r?\n)+/);
