--- a/src/index.pug
+++ b/src/index.pug
@@ -59,6 +59,7 @@ block content
           data-for-us=present.presentForUs.toString()
         )
           h2 #{present.title}
+          img.image(src='/assets/' + present.image)
           .text
             - var paragraphs = present.body.trim().split(/(\r?\n)+/);
             each paragraph in paragraphs
