--- a/src/layout.pug
+++ b/src/layout.pug
@@ -5,6 +5,12 @@ head
   meta(name='viewport' content='initial-scale=1')
   link(rel='preconnect' href='https://fonts.gstatic.com')
   link(href='https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap' rel='stylesheet')
+  script(async,src="https://www.googletagmanager.com/gtag/js?id=UA-167219453-1")
+  script.
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-167219453-1');
   - var langPrefix = currentLang === env.DEFAULT_LANG ? '' : `/${currentLang}`
   block head
 body
