--- a/src/layout.pug
+++ b/src/layout.pug
@@ -3,8 +3,10 @@ head
   meta(charset='utf-8')
   title Health&amp;Help Secret Santa
   meta(name='viewport' content='initial-scale=1')
-  link(rel='preconnect' href='https://fonts.gstatic.com')
-  link(href='https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap' rel='stylesheet')
+  link(rel="preconnect" href="https://fonts.googleapis.com")
+  link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
+  link(href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet")
+
   script(async,src="https://www.googletagmanager.com/gtag/js?id=G-3YNTW59FZJ")
   script.
     window.dataLayer = window.dataLayer || [];
