--- a/src/index.scss
+++ b/src/index.scss
@@ -21,8 +21,8 @@ body.scrolled .goToMainSite {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0.0174) 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(180deg, rgba(0, 0, 0, 0.45) 100%, rgba(255, 255, 255, 0.45) 100%), url('/assets/bg.jpg');
-    background-position: center top;
+    background: linear-gradient(180deg, rgb(0 0 0 / 50%) 0%, rgba(255, 255, 255, 0) 10%), url(/assets/bg.jpg);
+    background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
@@ -33,12 +33,59 @@ body.scrolled .goToMainSite {
       color: white;
     }
 
-    .logo {
-      width: 78rem;
+    .ribbon {
+      position: absolute;
+      top: 0;
+      left: 50%;
+      width: 47px;
+      height: 100%;
+      transform: translateX(-615px);
+
+      &::before {
+        content: ' ';
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: var(--ribbon);
+        z-index: 1;
+      }
+
+      .caption {
+        font-size: 30px;
+        font-weight: 400;
+        line-height: 36px;
+        position: absolute;
+        background: white;
+        border-radius: 18px;
+        padding: 40px 100px 40px 140px;
+        opacity: 0.9;
+
+        &, * {
+          color: black;
+        }
+      }
     }
 
-    .caption {
-      font-weight: 300;
+    img.bow {
+      position: absolute;
+      left: 0;
+      width: 450px;
+      transform: translate(-195px, -200px);
+      z-index: 2;
+    }
+
+    .bow, .caption {
+      //top: 60%;
+      bottom: 3%;
+    }
+
+
+    .logo {
+      width: 540px;
+      margin-bottom: 24px;
     }
 
     .language-switch {
@@ -59,12 +106,6 @@ body.scrolled .goToMainSite {
       display: flex;
       flex-direction: column;
       align-items: center;
-
-      .caption {
-        margin-top: 1rem;
-        font-size: 6rem;
-        line-height: 1.5em;
-      }
     }
   }
 
