--- a/src/index.scss
+++ b/src/index.scss
@@ -21,13 +21,22 @@ body.scrolled .goToMainSite {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(180deg, rgb(0 0 0 / 50%) 0%, rgba(255, 255, 255, 0) 10%), url(/assets/bg.jpg);
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
     position: relative;
     text-align: center;
     padding: 6rem;
+
+    &::before {
+      content: ' ';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%, rgba(255, 255, 255, 0) 10%), url(/assets/bg.jpg);
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
 
     * {
       color: white;
@@ -320,6 +329,7 @@ body.scrolled .goToMainSite {
       border: none;
       font-weight: bold;
       font-size: 6rem;
+      min-height: 60px;
     }
 
     .donateAmountInput {
@@ -437,21 +447,72 @@ body.scrolled .goToMainSite {
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 640px) {
   :root {
     font-size: 4px;
   }
 
   .screen {
     &.cover {
-      .logo {
-        max-width: 90vw;
+      background-position-x: 60%;
+
+      &::before {
+        height: 68%;
+      }
+
+      .ribbon {
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 32%;
+        top: unset;
+        transform: none;
+
+        &::before {
+          transform: none;
+          height: 16px;
+          bottom: 0;
+          top: unset;
+        }
+
+        .bow {
+          width: 200px;
+          left: unset;
+          right: 0;
+          transform: none;
+          bottom: -87px;
+        }
+
+        .caption {
+          width: 100%;
+          height: 100%;
+          padding: 24px 24px 56px 24px;
+          border-radius: 8px 8px 0 0;
+          bottom: 0;
+          font-size: 22px;
+          line-height: 1.3;
+
+          .logo {
+            width: 100%;
+            max-height: 60px;
+          }
+        }
       }
     }
 
 
     &.donate {
       padding: 9rem 9rem;
+
+      .donateAmountInput {
+        margin-left: 0;
+        width: 100%;
+        max-width: unset;
+      }
+
+      .donateOr {
+        margin-left: 0;
+      }
 
       .bg-list {
         &::before {
@@ -492,6 +553,12 @@ body.scrolled .goToMainSite {
 
         .controls {
           align-items: stretch;
+
+          .row {
+            flex-direction: column;
+            gap: 2rem;
+            height: unset;
+          }
         }
       }
 
@@ -522,6 +589,7 @@ body.scrolled .goToMainSite {
             display: block;
             margin-top: 4rem;
             width: 100%;
+            position: static;
           }
 
           &.isVisible {
