--- a/src/index.pug
+++ b/src/index.pug
@@ -52,11 +52,11 @@ block content
           if currentLang === "ru"
             div.donateOr
               span
-                | или перейти на
+                | или
                 |
                 a(
                   href="https://sobe.ru/na/podderzhi_proekt_health_help"
-                ) sobe.ru
+                ) помочь в рублях
         label.donateSubscribeCheckbox
           .checkbox
             input#donateSubscribeCheckbox(type='checkbox')
