--- a/src/index.scss
+++ b/src/index.scss
@@ -160,7 +160,7 @@ body.scrolled .goToMainSite {
         left: 0;
         width: 100%;
         height: 100%;
-        background: linear-gradient(89.54deg, rgba(0, 0, 0, 0.8) 0.35%, rgba(0, 0, 0, 0) 99.56%), linear-gradient(180deg, rgba(0, 0, 0, 0) 41.67%, rgba(0, 0, 0, 0.6225) 70.31%, rgba(0, 0, 0, 0.75) 100%);
+        background: linear-gradient(89.54deg, rgba(0, 0, 0, 0.8) 0.35%, rgba(0, 0, 0, 0) 99.56%), linear-gradient(180deg, rgb(0 0 0 / 26%) 41.67%, rgb(0 0 0 / 66%) 70.31%, rgba(0, 0, 0, 0.75) 100%);
         z-index: 3;
       }
 
