--- a/src/success.scss
+++ b/src/success.scss
@@ -7,6 +7,11 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background: linear-gradient(180deg, rgb(0 0 0 / 19%) 0%, rgb(0 0 0 / 75%) 100%), url(/assets/success.jpg);
+  color: white;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .message {
@@ -14,5 +19,5 @@ body {
 }
 
 .goToMainSite {
-  color: black;
+  font-size: 18px;
 }
