--- a/src/success.pug
+++ b/src/success.pug
@@ -4,5 +4,5 @@ block head
   link(rel="stylesheet", href="/success.css" )
 
 block content
-  a(href=`https://he-he.org${langPrefix}`).goToMainSite <span>&#10229;</span>#{data.goBack}
+  a(href=data.backUrl).goToMainSite <span>&#10229;</span>#{data.goBack}
   h1.message #{data.thankYou}
