--- a/src/layout.pug
+++ b/src/layout.pug
@@ -17,4 +17,13 @@ head
   block head
 body
   block content
-
+  footer
+    p
+      | © Health & Help
+    p
+      | All rights reserved. International Charity Organization
+    p
+      | Health & Help is a recognized 501(c)(3) not-for-profit organization by the IRS. EIN: 81-3432192
+    p
+      a(href='https://he-he.org/wp-content/themes/shapely.1.2.8/shapely/assets/pdf/privacy_polic.pdf')
+        | Privacy Policy
