--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -44,3 +44,17 @@ $z-index-details: 5;
     top: -0.17em;
   }
 }
+
+footer {
+  font-size: 12px;
+  padding: 20px;
+  background: #000000;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  text-align: right;
+
+  &, * {
+    color: #ffffff30;
+  }
+}
